--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -1,6 +1,6 @@
  .hero {
     height: 250px;
-    background-image: url('src/assets/books-cover.png');
+    background-image: url('../../assets/books-cover.png');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
