--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,12 @@ body.bg-theme-dark .btn-close {
 .main {
     padding-top: 150px;
 }
+
+@media (max-width: 576px) {
+    .modal-dialog {  
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        margin: 0;
+    }
+}
